# vibelang

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Makefile  README.md  annotated.html  annotated_dup.js  ast_8c.html  ast_8c.js  ast_8c__incl.map  ast_8c__incl.md5  ast_8c_a2419f701c158dfda05a2e52dadf15cd9_icgraph.map  ast_8c_a2419f701c158dfda05a2e52dadf15cd9_icgraph.md5  ast_8c_a2b4764483b348795da4c679c40b757cc_cgraph.map  ast_8c_a306113416218f23a8d28133bc00ec9fe_icgraph.map  ast_8c_a306113416218f23a8d28133bc00ec9fe_icgraph.md5  ast_8c_a32543242aaa7564aa89401281f4a7128_cgraph.md5  ast_8c_a32543242aaa7564aa89401281f4a7128_icgraph.map  ast_8c_a32543242aaa7564aa89401281f4a7128_icgraph.md5  ast_8c_a521c8725040eb58724a532a078214176_cgraph.map  ast_8c_a521c8725040eb58724a532a078214176_cgraph.md5  ast_8c_a521c8725040eb58724a532a078214176_icgraph.map  ast_8c_a5a3805213f82f86d52d7fc69afaa7051_cgraph.md5  ast_8c_a987dfffca7a73793c3eec19e8d8aa1e1_cgraph.map  ast_8c_a99b3a62826a5e255be0a7336d1328c9f_cgraph.map  ast_8c_a9cfef28eec18ef8c3ff258d2b789cc4a_cgraph.map  ast_8c_aba39a879574eadc84b9a30e5cc66aa68_cgraph.map  ast_8c_aba39a879574eadc84b9a30e5cc66aa68_icgraph.map  ast_8c_aebcba5f6f0e88bd887344c794407cd0c_icgraph.map  ast_8c_aebcba5f6f0e88bd887344c794407cd0c_icgraph.md5  ast_8c_af82e92aec3834763869c32b437350c3b_cgraph.map  ast_8c_af82e92aec3834763869c32b437350c3b_icgraph.map  ast_8h.html  ast_8h.js  ast_8h__dep__incl.map  ast_8h__dep__incl.md5  ast_8h__incl.map  ast_8h__incl.md5  ast_8h_a2b4764483b348795da4c679c40b757cc_cgraph.md5  (+483 more)
.github/workflows/: deploy-docs.yml  tests.yml
docs/: API_REFERENCE.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  IMPLEMENTATION.md  LANGUAGE_GUIDE.md  LANGUAGE_REFERENCE.md  index.html
examples/: README.md  greeting.c  greeting.vibe  joke.vibe  weather.vibe
include/: runtime.h  symbol_table.h  vibelang.h
python/: README.md  pyproject.toml
python/vibelang/: __init__.py  build.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_1.js  (+40 more)
src/: vibelang.c
src/compiler/: CMakeLists.txt  codegen.c  codegen.h  grammar.peg  lexer.c  lexer.l  parser.c.bak  parser.h  parser.y  parser_bison.h  parser_impl.c  parser_internal.h  parser_safeguard.c  parser_utils.c  parser_utils.h  semantic.c  semantic.h  symbol_table.c
src/runtime/: config.c  config.h  llm_interface.c  llm_interface.h  runtime.c
src/tools/: vibec.c
src/utils/: ast.c  ast.h  cache_utils.c  cache_utils.h  file_utils.c  file_utils.h  log_utils.c  log_utils.h
tests/: CMakeLists.txt
tests/python/: test_python_helpers.py
tests/unit/: test_ast.c  test_bison_parser.c  test_codegen.c  test_llm_integration.c  test_parser.c  test_parser_utils.c  test_semantic.c  test_vibec_rpath.c
tests/unit/data/: function_with_vars.expected.c  meaning_var.expected.c  simple_function.expected.c
vscode/: README.md  package.json  vibelang-0.0.1.vsix
vscode/syntaxes/: vibelang.tmLanguage.json
